# rodengine

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  REPO_STRUCTURE.txt  eslint.config.mts  package.json  vite.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
apps/db-bench/: Cargo.toml
apps/db-bench/src/: cli.rs  main.rs  utils.rs
apps/db-bench/src/benchmarks/: baseline_read.rs  cache_contention.rs  memory_overhead.rs  mixed_workload.rs  mod.rs  procedure_scaling.rs  write_throughput.rs
apps/db-cli/: Cargo.toml
apps/db-cli/src/: main.rs
apps/db-server/: Cargo.toml
apps/db-server/src/: main.rs
apps/db-test-runner/: Cargo.toml
apps/db-test-runner/src/: main.rs
apps/db-tool/: Cargo.toml
apps/db-tool/src/: main.rs
benches/: crud_benchmark.rs
docs/: Deployment_Guide.md  ECS_Architecture.md  ECS_Database_PRD.md  Implementation_Guide.md  api_reference.md  db_integration_test_plan.txt  db_product_requirements.md  db_product_requirements.txt  db_specs.txt  db_technical_reference.md  db_technical_reference.txt  quick_start.md
docs/cycle_1/: backlog.txt
docs/new_requirments/: db_backlog_tdd.txt  db_requirement.txt  db_trd.md
docs/new_requirments/db/: db_backlog_tdd.txt  db_implementation_plan.md  db_quick_reference.md  db_weekly_breakdown.md
docs/new_requirments/db/test_plans/: db_test_plan_ab_1.md  db_test_plan_ab_2.md  db_test_plan_ab_3.md  db_test_plan_ao_1.md  db_test_plan_ao_2.md  db_test_plan_ce_1.md  db_test_plan_ce_2.md  db_test_plan_ct_1.md  db_test_plan_ct_2.md  db_test_plan_ds_1.md  db_test_plan_ds_2.md  db_test_plan_el_1.md  db_test_plan_el_2.md  db_test_plan_lf_1.md  db_test_plan_lf_2.md  db_test_plan_mi_1.md  db_test_plan_mi_2.md  db_test_plan_mi_3.md  db_test_plan_ms_1.md  db_test_plan_ms_2.md  db_test_plan_pp_1.md  db_test_plan_pp_2.md  db_test_plan_pr_1.md  db_test_plan_pr_2.md  db_test_plan_rc_1.md  db_test_plan_rc_2.md  db_test_plan_rc_3.md  db_test_plan_rc_4.md  db_test_plan_rc_5.md  db_test_plan_re_1.md  db_test_plan_re_2.md  db_test_plan_rl_1.md  db_test_plan_rl_2.md  db_test_plan_rp_1.md  db_test_plan_rp_2.md  db_test_plan_rs_1.md  db_test_plan_rs_2.md  db_test_plan_rs_3.md  db_test_plan_rs_4.md  db_test_plan_rs_5.md  (+14 more)
docs/test_plans/: test_plan_data_model_custom_types.txt  test_plan_data_model_table_schema.txt  test_plan_foundation_memory_safety.txt  test_plan_foundation_storage_layout.txt  test_plan_foundation_zero_copy.txt
ecsdb/: Cargo.toml
ecsdb/benches/: inserts.rs  reads.rs  transactions.rs
ecsdb/examples/: basic_usage.rs  simple_schema.toml
ecsdb/src/: component.rs  config.rs  db.rs  error.rs  json.rs  lib.rs
ecsdb/src/entity/: archetype.rs  mod.rs  registry.rs
ecsdb/src/persistence/: compaction.rs  file_wal.rs  manager.rs  mod.rs  snapshot.rs  wal.rs
ecsdb/src/replication/: broadcast.rs  client.rs  conflict.rs  delta_encoder.rs  delta_log.rs  mod.rs  sync.rs
ecsdb/src/schema/: migrations.rs  mod.rs  parser.rs  types.rs  validator.rs
ecsdb/src/storage/: buffer.rs  delta.rs  field_codec.rs  layout.rs  mod.rs  sparse.rs  table.rs
ecsdb/src/transaction/: engine.rs  mod.rs  wal.rs  write_queue.rs
ecsdb/tests/: integration.rs  replication.rs
ecsdb_client/: Cargo.toml
ecsdb_client/src/: client_db.rs  error.rs  lib.rs  sync.rs
examples/: query_records.rs
scripts/: count-lines.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Header.vue  Sidebar.vue
src/layouts/: Layout.vue
src/router/: index.ts
src/store/: index.ts
src/views/: DataViewer.vue  PerformanceProfiling.vue  QueryBuilder.vue  ReplicationDashboard.vue  SchemaEditor.vue
tasks/: 00_project_setup.md  01_core_engine.md  02_advanced_storage.md  03_persistence.md  04_replication.md  05_dashboard_polish.md  IMPLEMENTED.md  README.md  tests_backlog.md
tests/integration/: basic_crud.rs  mod.rs
tests/integration/helpers/: mod.rs
