[workspace]
members = [
    "apps/db-server",
    "apps/db-cli", 
    "apps/db-test-runner",
    "packages/db-core",
    "packages/db-runtime",
    "packages/db-api",
    "packages/db-persistence",
    "packages/db-types"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arc-swap = "1.0"
rayon = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
