[workspace]
resolver = "2"
members = [
    "packages/in-mem-db-core",
    "packages/in-mem-db-runtime", 
    "packages/in-mem-db-api",
    "apps/db-server",
    "apps/db-tool",
    "apps/db-bench",
]

[workspace.dependencies]
arc-swap = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
memmap2 = "0.9"
rayon = "1.10"
tokio = { version = "1.40", features = ["rt", "macros", "sync", "net"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
matchit = "0.8"
clap = { version = "4.0", features = ["derive"] }
criterion = "0.5"
tempfile = "3.10"
crc32fast = "1.4"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance in-memory relational database with lock-free operations"
repository = "https://github.com/yourusername/rodengine"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
