[package]
name = "ecsdb_client"
version = "0.1.0"
edition = "2021"
authors = ["you"]
license = "MIT OR Apache-2.0"
description = "Client library for ECS Database replication"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
zstd = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
ecsdb = { path = "../ecsdb" }

[dev-dependencies]
tokio-test = "0.4"