[package]
name = "db-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Main REST API server for in-memory database"
repository.workspace = true
readme.workspace = true

[[bin]]
name = "db-server"
path = "src/main.rs"

[features]
default = ["persist"]
persist = ["in-mem-db-core/persist"]

[dependencies]
in-mem-db-core = { path = "../../packages/in-mem-db-core", version = "0.1.0" }
in-mem-db-runtime = { path = "../../packages/in-mem-db-runtime", version = "0.1.0", features = ["parallel"] }
in-mem-db-api = { path = "../../packages/in-mem-db-api", version = "0.1.0" }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
anyhow = { workspace = true }

[dev-dependencies]